--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <a href="./recipes/lasagna.html">Lasagna</a>
-        
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/tacos.html">Authentic Tacos al Pastor</a></li>
+            <li><a href="./recipes/churros.html">Churros</a></li>
+        </ul>
     </body>
 </html>
