--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Lasagna</h1>
-        <img src="./../images/image.webp" alt="Lasagna image">
+        <img src="./../images/lasagna.webp" alt="Lasagna image">
 
         <h3>How to Make Lasagna</h3>
         <p>Making lasagna can be time-consuming, but the results are well 
@@ -17,7 +17,7 @@
             over the basics:
         </p>
 
-        <h4>Lasagna Ingredients</h4>
+        <h4>Ingredients:</h4>
         <ul>
             <li>Meat: This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
             <li>Onion and garlic: An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
