--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <head>
         <title>Odin recipes</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="./style.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="title">Recipes</h1>
 
-        <ul>
+        <ul class="links">
             <li><a href="./recipes/lasagna.html">Lasagna</a></li>
             <li><a href="./recipes/tacos.html">Authentic Tacos al Pastor</a></li>
             <li><a href="./recipes/churros.html">Churros</a></li>
