--- a/recipes/churros.html
+++ b/recipes/churros.html
@@ -4,10 +4,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Churros</title>
+        <link rel="stylesheet" href="./../style.css">
     </head>
-    <body>
-        <h1>Churros</h1>
+    <body class="center">
+        <h1 class="recipe-title">Churros</h1>
 
         <img src="./../images/churros.webp" alt="Churros image">
 
