--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,13 +4,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Lasagna</title>
+        <link rel="stylesheet" href="./../style.css">
     </head>
-    <body>
-        <h1>Lasagna</h1>
+    <body class="center">
+        <h1 class="recipe-title">Lasagna</h1>
         <img src="./../images/lasagna.webp" alt="Lasagna image">
 
-        <h3>How to Make Lasagna</h3>
+        <h3 class="sub-title">How to Make Lasagna</h3>
         <p>Making lasagna can be time-consuming, but the results are well 
             worth the wait. You'll find a detailed ingredient list and 
             step-by-step instructions in the recipe below, but let's go 
