--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -4,14 +4,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Tacos</title>
+        <link rel="stylesheet" href="./../style.css">
     </head>
-    <body>
-        <h1>Authentic Tacos al Pastor</h1>
+    <body class="center">
+        <h1 class="recipe-title">Authentic Tacos al Pastor</h1>
 
         <img src="./../images/tacos.webp" alt="Tacos image">
 
-        <h3>What Are ​​Tacos al Pastor Made Of?</h3>
+        <h3 class="sub-title">What Are ​​Tacos al Pastor Made Of?</h3>
         <p>Two pounds of thinly sliced boneless pork loin is marinated in a 
             blended mixture of tomatoes, two types of peppers (guajillo chile 
             peppers and ancho chile peppers), sliced pineapple, orange juice, 
